--- a/.github/workflows/octoguard.yml
+++ b/.github/workflows/octoguard.yml
@@ -1,7 +1,12 @@
 name: octoguard
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 on:
   workflow_call:
+  workflow_dispatch:
   pull_request:
   push:
     branches:
