remove workflow level permissions

--- a/.github/workflows/octoguard.yml
+++ b/.github/workflows/octoguard.yml
@@ -8,9 +8,9 @@ on:
     branches:
       - main
 
-permissions:
-  contents: read
-  actions: read
+# permissions:
+#   contents: read
+#   actions: read
 
 env:
   ZIZMOR_VERSION: 1.5.2
